--- a/musicality-api/Gemfile
+++ b/musicality-api/Gemfile
@@ -42,6 +42,11 @@ group :development, :test do
   gem 'database_cleaner'
 end
 
+group :test do
+  gem 'faker'
+  gem 'shoulda-matchers', '~> 3.1'
+end
+
 group :development do
   gem 'listen', '>= 3.0.5', '< 3.2'
   # Spring speeds up development by keeping your application running in the background. Read more: https://github.com/rails/spring
