--- a/musicality-api/Gemfile
+++ b/musicality-api/Gemfile
@@ -35,20 +35,21 @@ group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   # gem 'byebug', platforms: [:mri, :mingw, :x64_mingw]
   # Adds support for Capybara system testing and selenium driver
-  gem 'capybara', '~> 2.13'
+  # gem 'capybara', '~> 2.13'
   # gem 'selenium-webdriver'
   gem 'pry'
   gem 'pry-remote'
   gem 'rspec-rails', '~> 3.5'
   gem 'factory_bot_rails'
   gem 'database_cleaner'
-  gem 'phantomjs'
-  gem 'poltergeist'
 end
 
 group :test do
   gem 'faker'
   gem 'shoulda-matchers', '~> 3.1'
+  gem 'phantomjs'
+  gem 'poltergeist'
+  gem 'capybara'
 end
 
 group :development do
